@@ -36,7 +36,6 @@ import com.google.devtools.kythe.analyzers.java.SourceText.Keyword;
 import com.google.devtools.kythe.analyzers.java.SourceText.Positions;
 import com.google.devtools.kythe.analyzers.jvm.JvmGraph;
 import com.google.devtools.kythe.analyzers.jvm.JvmGraph.Type.ReferenceType;
-import com.google.devtools.kythe.platform.java.filemanager.ForwardingStandardJavaFileManager;
 import com.google.devtools.kythe.platform.java.helpers.JCTreeScanner;
 import com.google.devtools.kythe.platform.java.helpers.JavacUtil;
 import com.google.devtools.kythe.platform.java.helpers.SignatureGenerator;
@@ -673,21 +672,7 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
   }
 
   private static Iterable<Type> getTargets(JCFunctionalExpression node) {
-    try {
-      @SuppressWarnings("unchecked")
-      Iterable<Type> targets =
-          (Iterable<Type>) JCFunctionalExpression.class.getField("targets").get(node);
-      return targets != null ? targets : ImmutableList.of();
-    } catch (ReflectiveOperationException e) {
-      // continue below
-    }
-    try {
-      // Work with the field rename in JDK 11: http://hg.openjdk.java.net/jdk/jdk11/rev/f854b76b6a0c
-      return com.sun.tools.javac.util.List.of(
-          (Type) JCFunctionalExpression.class.getField("target").get(node));
-    } catch (ReflectiveOperationException e) {
-      throw new LinkageError(e.getMessage(), e);
-    }
+    return ImmutableList.of(node.target);
   }
 
   @Override
@@ -1247,11 +1232,6 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
     return node;
   }
 
-  // Emits a node for the given sym, an anchor encompassing the TreeContext, and a REF edge.
-  private JavaNode emitSymUsage(TreeContext ctx, Symbol sym) {
-    return emitSymUsage(ctx, sym, EdgeKind.REF);
-  }
-
   // Emits a node for the given sym, an anchor encompassing the name, and a REF edge
   private JavaNode emitNameUsage(TreeContext ctx, Symbol sym, Name name) {
     return emitNameUsage(ctx, sym, name, EdgeKind.REF);
@@ -1686,16 +1666,8 @@ public class KytheTreeScanner extends JCTreeScanner<JavaNode, TreeContext> {
   /** Resovles a string as a source-file relative path */
   private String resolveSourcePath(String path) {
     try {
-      // TODO(shahms): Remove this cast/check/fallback when we only support JDK9+.
-      if (fileManager instanceof ForwardingStandardJavaFileManager) {
-        return ((ForwardingStandardJavaFileManager) fileManager)
-            .asPath(filePositions.getSourceFile())
-            .resolveSibling(path)
-            .toString();
-      }
-    } catch (UnsupportedOperationException
-        | IllegalArgumentException
-        | NullPointerException unused) {
+      return fileManager.asPath(filePositions.getSourceFile()).resolveSibling(path).toString();
+    } catch (UnsupportedOperationException unused) {
       // Do nothing; perform fallback below
     }
     // Fallback to URI-based path resolution when asPath is unsupported.
